--- a/src/shared/locales/messages/en.json
+++ b/src/shared/locales/messages/en.json
@@ -1,7 +1,10 @@
 {
   "Header": {
     "sign-in": "Sign In",
-    "sign-out": "Sign Out"
+    "sign-out": "Sign Out",
+    "authenticationLoading": "Wait, your authentication in progress",
+    "successLogoutMessage": "Congratulations, you have successfully log out!",
+    "unexpectedError": "An unexpected error occurred."
   },
   "WelcomePage": {
     "title-anonymous": "Welcome",
@@ -18,7 +21,10 @@
     "acceptTermInput": "I have read and agree to the Terms of Service",
     "signUpButton": "Sign Up",
     "loginText": "Already have an account?",
-    "loginLink": "Sign In"
+    "loginLink": "Sign In",
+    "authenticationLoading": "Wait, your authentication in progress",
+    "successRegisterMessage": "Congratulations, you have successfully register!",
+    "unexpectedError": "An unexpected error occurred."
   },
   "LoginPage": {
     "title": "Login",
@@ -27,7 +33,10 @@
     "signUpButton": "Sign In",
     "registrationText": "Don't have an account?",
     "registrationLink": "Sign Up",
-    "googleText": "Continue with Google"
+    "googleText": "Continue with Google",
+    "authenticationLoading": "Wait, your authentication in progress",
+    "successLoginMessage": "Congratulations, you have successfully logged in!",
+    "unexpectedError": "An unexpected error occurred."
   },
   "Validation": {
     "nameCapitalized": "Name must start with a capital letter and be followed by lowercase letters",
