--- a/src/shared/locales/messages/ru.json
+++ b/src/shared/locales/messages/ru.json
@@ -10,7 +10,8 @@
     "title-anonymous": "Добро пожаловать",
     "title-registered": "С возвращением,",
     "sign-in": "Войти",
-    "sign-up": "Регистрация"
+    "sign-up": "Регистрация",
+    "welcome-text": "Исследуйте и взаимодействуйте с API легко и быстро с помощью нашего мощного, но лёгкого инструмента, который объединяет лучшие возможности Postman и GraphiQL. Независимо от того, работаете ли вы с RESTful API или GraphQL, наша платформа предлагает удобный интерфейс для выполнения запросов, просмотра ответов и управления вашими API-взаимодействиями."
   },
   "RegistrationPage": {
     "title": "Регистрация",
