feat: add Teams section

--- a/src/shared/locales/messages/ru.json
+++ b/src/shared/locales/messages/ru.json
@@ -12,8 +12,9 @@
     "sign-in": "Войти",
     "sign-up": "Регистрация",
     "welcome-text": "Исследуйте и взаимодействуйте с API легко и быстро с помощью нашего мощного, но лёгкого инструмента, который объединяет лучшие возможности Postman и GraphiQL. Независимо от того, работаете ли вы с RESTful API или GraphQL, наша платформа предлагает удобный интерфейс для выполнения запросов, просмотра ответов и управления вашими API-взаимодействиями.",
-    "welcome-titles": "['RESTful клиент', 'GraphiQL', 'Форматирование запросов', 'Аутентификация', 'Интернационализация', 'История запросов']",
-    "welcome-descriptions": "['Легко выполняйте и управляйте RESTful API запросами с помощью удобного интерфейса, созданного для эффективности.', 'Воспользуйтесь встроенным интерфейсом GraphiQL для плавного и интуитивно понятного выполнения GraphQL запросов и мутаций.', 'Автоматически форматируйте и упорядочивайте ваши запросы для улучшения читаемости и удобства обслуживания.', 'Обеспечьте безопасность ваших данных с помощью встроенной аутентификации Firebase.', 'Выбирайте предпочитаемый язык для персонализированного опыта.', 'Легко возвращайтесь к предыдущим запросам и повторяйте их с помощью нашей функции истории.']"
+    "welcome-titles": "['RESTful клиент', 'GraphiQL', 'Форматирование запросов', 'Аутентификация', 'Мультиязычный интерфейс', 'История запросов']",
+    "welcome-descriptions": "['Легко выполняйте и управляйте RESTful API запросами с помощью удобного интерфейса, созданного для эффективности.', 'Воспользуйтесь встроенным интерфейсом GraphiQL для плавного и интуитивно понятного выполнения GraphQL запросов и мутаций.', 'Автоматически форматируйте и упорядочивайте ваши запросы для улучшения читаемости и удобства обслуживания.', 'Обеспечьте безопасность ваших данных с помощью встроенной аутентификации Firebase.', 'Выбирайте предпочитаемый язык для персонализированного опыта.', 'Легко возвращайтесь к предыдущим запросам и повторяйте их с помощью нашей функции истории.']",
+    "welcome-teams": "Используется ведущими командами по всему миру"
   },
   "RegistrationPage": {
     "title": "Регистрация",
