feat: add resize components, refactor rest and graph clients

--- a/src/shared/locales/messages/en.json
+++ b/src/shared/locales/messages/en.json
@@ -89,6 +89,7 @@
   "Common": {
     "key": "key",
     "value": "value",
-    "status": "Status code"
+    "status": "Status code",
+    "label-resize": "Show/hide panel"
   }
 }
