--- a/src/shared/locales/messages/ru.json
+++ b/src/shared/locales/messages/ru.json
@@ -89,6 +89,7 @@
   "Common": {
     "key": "ключ",
     "value": "значение",
-    "status": "Статус код"
+    "status": "Статус код",
+    "label-resize": "Показать/скрыть панель"
   }
 }
