--- a/src/shared/locales/messages/ru.json
+++ b/src/shared/locales/messages/ru.json
@@ -81,11 +81,12 @@
     "headers": "заголовки",
     "variables": "переменные",
     "url": "Url-адрес",
-    "endpoint": "Точка входа",
+    "endpoint": "API",
     "documentation": "Справка",
     "show-doc": "Показать справку",
     "error-no-doc-url": "URL документации не задан",
-    "error-parse-schema": "Ошибка при разборе схемы"
+    "error-parse-schema": "Ошибка при разборе схемы",
+    "need-doc-url": "Вам нужно установить URL документации"
   },
   "Common": {
     "key": "ключ",
