--- a/src/shared/locales/messages/ru.json
+++ b/src/shared/locales/messages/ru.json
@@ -99,6 +99,7 @@
     "text": "Текст",
     "pretty": "Форматировать",
     "status-code": "Код",
-    "error-prettify": "Ошибка форматирования кода"
+    "error-prettify": "Ошибка форматирования кода",
+    "error-request": "Ошибка запроса"
   }
 }
