refactor: remove react-tostify and replace toasts with MUI

--- a/src/shared/locales/messages/en.json
+++ b/src/shared/locales/messages/en.json
@@ -100,5 +100,8 @@
     "pretty": "Make pretty",
     "status-code": "Code",
     "error-prettify": "Error formatting code"
+  },
+  "HistoryPage": {
+    "title": "History"
   }
 }
