--- a/src/shared/locales/messages/ru.json
+++ b/src/shared/locales/messages/ru.json
@@ -100,5 +100,8 @@
     "pretty": "Форматировать",
     "status-code": "Код",
     "error-prettify": "Ошибка форматирования кода"
+  },
+  "HistoryPage": {
+    "title": "История запросов"
   }
 }
