--- a/src/shared/locales/messages/ru.json
+++ b/src/shared/locales/messages/ru.json
@@ -102,6 +102,9 @@
     "error-prettify": "Ошибка форматирования кода"
   },
   "HistoryPage": {
-    "title": "История запросов"
+    "title": "История запросов",
+    "empty-text": "Вы пока не сделали ни одного запроса. Изучите страницы REST и GraphQL, чтобы начать!",
+    "rest-client": "REST Клиент",
+    "graphiql-client": "GraphiQL Клиент"
   }
 }
