--- a/src/shared/locales/messages/ru.json
+++ b/src/shared/locales/messages/ru.json
@@ -106,5 +106,9 @@
     "empty-text": "Вы пока не сделали ни одного запроса. Изучите страницы REST и GraphQL, чтобы начать!",
     "rest-client": "REST Клиент",
     "graphiql-client": "GraphiQL Клиент"
+  },
+  "ErrorPage": {
+    "text": "Мы искали везде, но не смогли найти то, что вы ищете. Давайте найдем для вас доступную страницу.",
+    "button": "Вернуться на Главную"
   }
 }
