feat: make debounce callback for fetching graphql schema

--- a/src/shared/locales/messages/en.json
+++ b/src/shared/locales/messages/en.json
@@ -86,6 +86,7 @@
     "show-doc": "Show documentation",
     "error-no-doc-url": "Documentation URL is not set",
     "error-parse-schema": "Error parsing schema",
+    "error-fetch-schema": "Error fetching schema",
     "need-doc-url": "You need to set the documentation URL"
   },
   "Common": {
