--- a/src/shared/locales/messages/ru.json
+++ b/src/shared/locales/messages/ru.json
@@ -86,6 +86,7 @@
     "show-doc": "Показать справку",
     "error-no-doc-url": "URL документации не задан",
     "error-parse-schema": "Ошибка при разборе схемы",
+    "error-fetch-schema": "Ошибка при запроса схемы",
     "need-doc-url": "Вам нужно установить URL документации"
   },
   "Common": {
