--- a/src/shared/locales/messages/en.json
+++ b/src/shared/locales/messages/en.json
@@ -65,7 +65,8 @@
     "password-min-length": "Password must be at least {min} characters long",
     "password-strength": "Password must contain 1 number, 1 uppercase letter, 1 lowercase letter, and 1 special character",
     "confirm-password-required": "Confirm Password is a required field",
-    "passwords-must-match": "Passwords must match"
+    "passwords-must-match": "Passwords must match",
+    "accept-term": "You must accept the terms and conditions"
   },
   "RestPage": {
     "send": "send",
