--- a/src/shared/locales/messages/ru.json
+++ b/src/shared/locales/messages/ru.json
@@ -65,7 +65,8 @@
     "password-min-length": "Пароль должен содержать минимум {min} символов",
     "password-strength": "Пароль должен содержать 1 цифру, 1 заглавную букву, 1 строчную букву и 1 специальный символ",
     "confirm-password-required": "Подтверждение пароля — обязательное поле",
-    "passwords-must-match": "Пароли должны совпадать"
+    "passwords-must-match": "Пароли должны совпадать",
+    "accept-term": "Вы должны принять условия и положения"
   },
   "RestPage": {
     "send": "отправить",
