--- a/src/shared/locales/messages/ru.json
+++ b/src/shared/locales/messages/ru.json
@@ -106,6 +106,7 @@
   },
   "HistoryPage": {
     "title": "История запросов",
+    "button": "Очистить все",
     "empty-text": "Вы пока не сделали ни одного запроса. Изучите страницы REST и GraphQL, чтобы начать!",
     "rest-client": "REST Клиент",
     "graphiql-client": "GraphiQL Клиент"
