--- a/src/shared/locales/messages/ru.json
+++ b/src/shared/locales/messages/ru.json
@@ -28,7 +28,9 @@
     "about-title": "Создано как итоговое задание Rolling Scopes School",
     "about-description": "RS School — это бесплатная онлайн-программа обучения, основанная сообществом разработчиков и проводимая сообществом The Rolling Scopes с 2013 года.",
     "about-courses": "Посмотреть предстоящие курсы",
-    "about-mentor": "Стать ментором"
+    "about-mentor": "Стать ментором",
+    "preview-title": "Попробуйте готовые запросы и изучите примеры",
+    "preview-text": "Для вашего удобства мы подготовили несколько примеров запросов, которые вы можете использовать как отправные точки. Нажмите на ссылки ниже, чтобы быстро получить доступ к преднастроенным запросам и увидеть, как работает наше API."
   },
   "RegistrationPage": {
     "title": "Регистрация",
