--- a/src/shared/locales/messages/ru.json
+++ b/src/shared/locales/messages/ru.json
@@ -87,7 +87,7 @@
     "error-no-doc-url": "URL документации не задан",
     "error-parse-schema": "Ошибка при разборе схемы",
     "error-fetch-schema": "Ошибка при запроса схемы",
-    "need-doc-url": "Вам нужно установить URL документации"
+    "need-doc-url": "Вам нужно ввести верный URL документации"
   },
   "Common": {
     "key": "ключ",
