--- a/src/shared/locales/messages/ru.json
+++ b/src/shared/locales/messages/ru.json
@@ -4,7 +4,8 @@
     "sign-out": "Выйти",
     "authentication-loading": "Подождите, идет процесс аутентификации",
     "success-logout-message": "Поздравляем, вы успешно вышли из приложения!",
-    "unexpected-error": "Произошла неожиданная ошибка."
+    "unexpected-error": "Произошла неожиданная ошибка.",
+    "history": "История запросов"
   },
   "WelcomePage": {
     "title-anonymous": "Добро пожаловать",
@@ -111,7 +112,8 @@
     "button": "Очистить все",
     "empty-text": "Вы пока не сделали ни одного запроса. Изучите страницы REST и GraphQL, чтобы начать!",
     "rest-client": "REST Клиент",
-    "graphiql-client": "GraphiQL Клиент"
+    "graphiql-client": "GraphiQL Клиент",
+    "request-button": "Перейти"
   },
   "ErrorPage": {
     "text": "Мы искали везде, но не смогли найти то, что вы ищете. Давайте найдем для вас доступную страницу.",
